fix: vault removal (#59)
* fix: removed vault support

* fix: update

* fix: updated helper functions

* fix: mongodb-services fix
